# wasmtime-component-wasi-preview-test

./: .gitignore  Cargo.toml  README.md  run.sh
.github/workflows/: run.yml
src/: host_impl.rs  main.rs
wasm_lib/: Cargo.toml
wasm_lib/src/: lib.rs
wasm_module/: Cargo.toml
wasm_module/src/: main.rs
wit/: world.wit
