[package]
name = "wasmtime-component-wasi-preview-test"
version = "0.1.0"
edition = "2021"

[dependencies]
wat = "1.0.57"
wit-component = "0.11.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = [
    "component-model",
    "async"
] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }
tokio = { version = "1.28.2", features = ["full"] }

[workspace]
members = ["wasm_lib", "wasm_module"]
